--- a/Lynn/Base.lproj/Main.storyboard
+++ b/Lynn/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="L6d-qm-LXq">
     <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -18,17 +18,23 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="#3" translatesAutoresizingMaskIntoConstraints="NO" id="rhJ-Hg-IkC">
                                 <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="rhJ-Hg-IkC" secondAttribute="height" multiplier="448:207" id="byf-ag-zlN"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="rhJ-Hg-IkC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-60" id="8YL-kX-ZBe"/>
-                            <constraint firstItem="rhJ-Hg-IkC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="E8h-hC-8Dz"/>
-                            <constraint firstItem="rhJ-Hg-IkC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="iWJ-Im-GT3"/>
-                            <constraint firstItem="rhJ-Hg-IkC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lye-5P-8o1"/>
+                            <constraint firstItem="rhJ-Hg-IkC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="AZl-M1-qMI"/>
+                            <constraint firstItem="rhJ-Hg-IkC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ecb-TT-gyV"/>
+                            <constraint firstItem="rhJ-Hg-IkC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="OVZ-Dg-XUR"/>
+                            <constraint firstItem="rhJ-Hg-IkC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Q38-ic-iEl"/>
+                            <constraint firstAttribute="bottom" secondItem="rhJ-Hg-IkC" secondAttribute="bottom" id="htB-cu-tDY"/>
+                            <constraint firstAttribute="trailing" secondItem="rhJ-Hg-IkC" secondAttribute="trailing" id="n5F-I5-y2U"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="VJk-aq-hsY"/>
                     <connections>
                         <outlet property="imageView" destination="rhJ-Hg-IkC" id="SN8-rR-QXE"/>
                     </connections>
@@ -36,6 +42,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="56.25" y="113.04347826086958"/>
+        </scene>
+        <!--Home Screen-->
+        <scene sceneID="DlI-M6-ohG">
+            <objects>
+                <viewController id="L6d-qm-LXq" customClass="homeScreen" customModule="Lynn" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="R4z-Zz-Fb8">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ViX-Rh-QVQ">
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ViX-Rh-QVQ" secondAttribute="height" multiplier="448:207" id="iZK-sW-9bI"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GeF-C1-5sM">
+                                <rect key="frame" x="703" y="263" width="62" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="fmg-4C-TKW"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5kX-4r-d30">
+                                <rect key="frame" x="180" y="143" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="6hL-9X-9b2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="ViX-Rh-QVQ" secondAttribute="bottom" id="CMa-YB-3t5"/>
+                            <constraint firstItem="ViX-Rh-QVQ" firstAttribute="leading" secondItem="R4z-Zz-Fb8" secondAttribute="leading" id="N8n-Zg-CqU"/>
+                            <constraint firstItem="ViX-Rh-QVQ" firstAttribute="top" secondItem="6hL-9X-9b2" secondAttribute="top" id="NhX-xH-LtB"/>
+                            <constraint firstItem="ViX-Rh-QVQ" firstAttribute="centerY" secondItem="R4z-Zz-Fb8" secondAttribute="centerY" id="cYG-WT-36g"/>
+                            <constraint firstItem="ViX-Rh-QVQ" firstAttribute="centerX" secondItem="R4z-Zz-Fb8" secondAttribute="centerX" id="pe7-QX-ZGm"/>
+                            <constraint firstAttribute="trailing" secondItem="ViX-Rh-QVQ" secondAttribute="trailing" id="sQo-bw-n93"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="air" destination="5kX-4r-d30" id="JnR-6j-CTg"/>
+                        <outlet property="imageView" destination="ViX-Rh-QVQ" id="3XH-SB-NpM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qew-61-gx0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-613" y="113"/>
         </scene>
     </scenes>
     <resources>
