--- a/Lynn/Base.lproj/Main.storyboard
+++ b/Lynn/Base.lproj/Main.storyboard
@@ -47,12 +47,16 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QNR-tL-dU1">
-                                <rect key="frame" x="328" y="111" width="240" height="128"/>
+                                <rect key="frame" x="99" y="87" width="207" height="167"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EX6-2o-2f4">
-                                <rect key="frame" x="413" y="331" width="49" height="34"/>
-                                <color key="backgroundColor" red="0.78126984830000001" green="0.89812177419999994" blue="0.89019763470000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <rect key="frame" x="590" y="312" width="60" height="43"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="7g4-V6-xtb"/>
+                                    <constraint firstAttribute="height" constant="43" id="uLN-KA-k97"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
                                 <state key="normal" title="Mulai">
                                     <color key="titleColor" red="0.1234147921" green="0.30637925859999998" blue="0.2745078802" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -62,32 +66,29 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lar-vM-AlW">
-                                <rect key="frame" x="138" y="262" width="620" height="43"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="43" id="7zz-Iq-yZp"/>
-                                </constraints>
+                                <rect key="frame" x="761" y="213" width="68" height="41"/>
                                 <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="28"/>
-                                <color key="textColor" red="0.71511071920000002" green="0.89032870529999997" blue="0.87843316790000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
+                                <color key="shadowColor" systemColor="systemGray2Color"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6hL-9X-9b2"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ViX-Rh-QVQ" firstAttribute="top" secondItem="6hL-9X-9b2" secondAttribute="top" id="0TJ-ja-r55"/>
+                            <constraint firstItem="6hL-9X-9b2" firstAttribute="trailing" secondItem="Lar-vM-AlW" secondAttribute="trailing" constant="23" id="0vW-Dp-CHn"/>
                             <constraint firstAttribute="trailing" secondItem="ViX-Rh-QVQ" secondAttribute="trailing" id="5Rb-54-7ho"/>
                             <constraint firstItem="ViX-Rh-QVQ" firstAttribute="top" secondItem="R4z-Zz-Fb8" secondAttribute="top" id="6Gn-5G-KMQ"/>
                             <constraint firstAttribute="trailing" secondItem="ViX-Rh-QVQ" secondAttribute="trailing" id="89w-sh-8lL"/>
+                            <constraint firstItem="6hL-9X-9b2" firstAttribute="bottom" secondItem="EX6-2o-2f4" secondAttribute="bottom" constant="38" id="AIy-WH-Xy1"/>
                             <constraint firstAttribute="bottom" secondItem="ViX-Rh-QVQ" secondAttribute="bottom" id="Ej7-KK-XoE"/>
                             <constraint firstAttribute="bottom" secondItem="ViX-Rh-QVQ" secondAttribute="bottom" id="Gn2-Bj-UfJ"/>
-                            <constraint firstItem="6hL-9X-9b2" firstAttribute="bottom" secondItem="EX6-2o-2f4" secondAttribute="bottom" constant="28" id="HBO-nd-iNS"/>
-                            <constraint firstItem="Lar-vM-AlW" firstAttribute="leading" secondItem="6hL-9X-9b2" secondAttribute="leading" constant="94" id="UTk-CV-ZFp"/>
+                            <constraint firstItem="Lar-vM-AlW" firstAttribute="top" secondItem="6hL-9X-9b2" secondAttribute="top" constant="213" id="HNR-c3-npL"/>
                             <constraint firstItem="ViX-Rh-QVQ" firstAttribute="leading" secondItem="R4z-Zz-Fb8" secondAttribute="leading" id="W6l-OQ-vIV"/>
-                            <constraint firstItem="Lar-vM-AlW" firstAttribute="centerX" secondItem="ViX-Rh-QVQ" secondAttribute="centerX" id="Wf6-dm-qgx"/>
                             <constraint firstItem="ViX-Rh-QVQ" firstAttribute="leading" secondItem="R4z-Zz-Fb8" secondAttribute="leading" id="Zdi-lf-s4w"/>
-                            <constraint firstItem="EX6-2o-2f4" firstAttribute="top" secondItem="Lar-vM-AlW" secondAttribute="bottom" constant="26" id="n84-is-r1U"/>
-                            <constraint firstAttribute="bottom" secondItem="Lar-vM-AlW" secondAttribute="bottom" constant="109" id="noH-RW-3C2"/>
-                            <constraint firstItem="EX6-2o-2f4" firstAttribute="leading" secondItem="6hL-9X-9b2" secondAttribute="leading" constant="369" id="vyj-QE-gLA"/>
+                            <constraint firstItem="EX6-2o-2f4" firstAttribute="top" secondItem="6hL-9X-9b2" secondAttribute="top" constant="312" id="c0S-kc-r6f"/>
+                            <constraint firstItem="EX6-2o-2f4" firstAttribute="leading" secondItem="6hL-9X-9b2" secondAttribute="leading" constant="546" id="pe1-oI-RGi"/>
                         </constraints>
                     </view>
                     <connections>
@@ -104,6 +105,12 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
